clang-ir/tests/snapshots/snapshot_fixtures__fixtures__logical_ops.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/logical_ops.c" (c, x86_64-unknown-linux-gnu)
global hits : s32i = CirInt { ty: Named("s32i"), value: "0" } [internal, default, align 4, dso_local]
global .str : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("%d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("%d %d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn mark(%arg4: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i):
        %87 = alloca s32i, "value", align 4
        %88 = alloca s32i, "__retval", align 4
        store %arg4, %87
        %89 = const 1 : s32i
        %90 = get_global @hits : s32i*
        %91 = load %90 : s32i, align 4
        %92 = add %91, %89 : s32i [nsw]
        store %92, %90, align 4
        %93 = load %87 : s32i, align 4
        store %93, %88
        %94 = load %88 : s32i
        return %94
}
fn logical_and(%arg2: s32i, %arg3: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i, %arg3: s32i):
        %75 = alloca s32i, "a", align 4
        %76 = alloca s32i, "b", align 4
        %77 = alloca s32i, "__retval", align 4
        store %arg2, %75
        store %arg3, %76
        %78 = load %75 : s32i, align 4
        %79 = cast(int_to_bool) %78 : bool
        %80 = ternary %79 ? { : bool
                %84 = load %76 : s32i, align 4
                %85 = call @mark(%84) : s32i [all]
                %86 = cast(int_to_bool) %85 : bool
                yield %86
        } : {
                %83 = const false : bool
                yield %83
        }
        %81 = cast(bool_to_int) %80 : s32i
        store %81, %77
        %82 = load %77 : s32i
        return %82
}
fn logical_or(%arg0: s32i, %arg1: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %63 = alloca s32i, "a", align 4
        %64 = alloca s32i, "b", align 4
        %65 = alloca s32i, "__retval", align 4
        store %arg0, %63
        store %arg1, %64
        %66 = load %63 : s32i, align 4
        %67 = cast(int_to_bool) %66 : bool
        %68 = ternary %67 ? { : bool
                %74 = const true : bool
                yield %74
        } : {
                %71 = load %64 : s32i, align 4
                %72 = call @mark(%71) : s32i [all]
                %73 = cast(int_to_bool) %72 : bool
                yield %73
        }
        %69 = cast(bool_to_int) %68 : s32i
        store %69, %65
        %70 = load %65 : s32i
        return %70
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 0 : s32i
        %3 = get_global @hits : s32i*
        store %2, %3, align 4
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[7]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = const 0 : s32i
        %8 = const 1 : s32i
        %9 = call @logical_and(%7, %8) : s32i [all]
        %10 = get_global @hits : s32i*
        %11 = load %10 : s32i, align 4
        %12 = call @printf(%6, %9, %11) : s32i [all]
        %13 = const 0 : s32i
        %14 = get_global @hits : s32i*
        store %13, %14, align 4
        %15 = get_global @printf : (s8i*, ...) -> s32i*
        %16 = get_global @.str : s8i[7]*
        %17 = cast(array_to_ptrdecay) %16 : s8i*
        %18 = const 2 : s32i
        %19 = const 3 : s32i
        %20 = call @logical_and(%18, %19) : s32i [all]
        %21 = get_global @hits : s32i*
        %22 = load %21 : s32i, align 4
        %23 = call @printf(%17, %20, %22) : s32i [all]
        %24 = const 0 : s32i
        %25 = get_global @hits : s32i*
        store %24, %25, align 4
        %26 = get_global @printf : (s8i*, ...) -> s32i*
        %27 = get_global @.str : s8i[7]*
        %28 = cast(array_to_ptrdecay) %27 : s8i*
        %29 = const 5 : s32i
        %30 = const 0 : s32i
        %31 = call @logical_or(%29, %30) : s32i [all]
        %32 = get_global @hits : s32i*
        %33 = load %32 : s32i, align 4
        %34 = call @printf(%28, %31, %33) : s32i [all]
        %35 = const 0 : s32i
        %36 = get_global @hits : s32i*
        store %35, %36, align 4
        %37 = get_global @printf : (s8i*, ...) -> s32i*
        %38 = get_global @.str : s8i[7]*
        %39 = cast(array_to_ptrdecay) %38 : s8i*
        %40 = const 0 : s32i
        %41 = const 7 : s32i
        %42 = call @logical_or(%40, %41) : s32i [all]
        %43 = get_global @hits : s32i*
        %44 = load %43 : s32i, align 4
        %45 = call @printf(%39, %42, %44) : s32i [all]
        %46 = get_global @printf : (s8i*, ...) -> s32i*
        %47 = get_global @.str.1 : s8i[10]*
        %48 = cast(array_to_ptrdecay) %47 : s8i*
        %49 = const 0 : s32i
        %50 = cast(int_to_bool) %49 : bool
        not
        %52 = cast(bool_to_int) %51 : s32i
        %53 = const 4 : s32i
        %54 = cast(int_to_bool) %53 : bool
        not
        %56 = cast(bool_to_int) %55 : s32i
        %57 = const 9 : s32i
        %58 = cast(int_to_bool) %57 : bool
        %59 = cast(bool_to_int) %58 : s32i
        %60 = call @printf(%48, %52, %56, %59) : s32i [all]
        %61 = const 0 : s32i
        store %61, %0
        %62 = load %0 : s32i
        return %62
}
