clang-ir/tests/snapshots/snapshot_fixtures__fixtures__long_double_literal_precision.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/long_double_literal_precision.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("local"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("global"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global global_pi : long_double<f80> = CirFloat { ty: LongDouble { underlying: Fp80 }, value: "3.14159265358979323851" } [internal, default, align 16, dso_local]
global .str.2 : s8i[3] = ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Str("%s"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("%02x"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn dump80(%arg0: s8i*, %arg1: long_double<f80>) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: long_double<f80>):
        %13 = alloca s8i*, "name", align 8
        %14 = alloca long_double<f80>, "value", align 16
        %15 = alloca u8i[10], "bytes", align 1
        store %arg0, %13
        store %arg1, %14
        %16 = get_global @memcpy : (void*, void*, u64i) -> void**
        %17 = cast(array_to_ptrdecay) %15 : u8i*
        %18 = cast(bitcast) %17 : void*
        %19 = cast(bitcast) %14 : void*
        %20 = const 10 : u64i
        %21 = call @memcpy(%18, %19, %20) : void* [all]
        %22 = get_global @printf : (s8i*, ...) -> s32i*
        %23 = get_global @.str.2 : s8i[3]*
        %24 = cast(array_to_ptrdecay) %23 : s8i*
        %25 = load %13 : s8i*, align 8
        %26 = call @printf(%24, %25) : s32i [all]
        scope {
                %31 = alloca s32i, "i", align 4
                %32 = const 0 : s32i
                store %32, %31, align 4
                for cond {
                        %44 = load %31 : s32i, align 4
                        %45 = const 10 : s32i
                        cmp
                        condition %46
                } step {
                        %33 = load %31 : s32i, align 4
                        inc
                        store %34, %31, align 4
                        yield
                } body {
                        %35 = get_global @printf : (s8i*, ...) -> s32i*
                        %36 = get_global @.str.3 : s8i[5]*
                        %37 = cast(array_to_ptrdecay) %36 : s8i*
                        %38 = load %31 : s32i, align 4
                        %39 = cast(integral) %38 : s64i
                        get_element
                        %41 = load %40 : u8i, align 1
                        %42 = cast(integral) %41 : s32i
                        %43 = call @printf(%37, %42) : s32i [all]
                        yield
                }
                yield
        }
        %27 = get_global @printf : (s8i*, ...) -> s32i*
        %28 = get_global @.str.4 : s8i[2]*
        %29 = cast(array_to_ptrdecay) %28 : s8i*
        %30 = call @printf(%29) : s32i [all]
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca long_double<f80>, "local_pi", align 16
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 3.14159265358979323851 : long_double<f80>
        store %3, %1, align 16
        %4 = get_global @.str : s8i[6]*
        %5 = cast(array_to_ptrdecay) %4 : s8i*
        %6 = load %1 : long_double<f80>, align 16
        call @dump80(%5, %6) [all]
        %7 = get_global @.str.1 : s8i[7]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = get_global @global_pi : long_double<f80>*
        %10 = load %9 : long_double<f80>, align 16
        call @dump80(%8, %10) [all]
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
