clang-ir/tests/snapshots/snapshot_fixtures__fixtures__long_double_pointer_out.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/long_double_pointer_out.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[24] = ConstArray { ty: Array { element_type: Named("s8i"), size: 24 }, elts: Str("0x1.0000000000000002p+0"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%La"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[8] = ConstArray { ty: Array { element_type: Named("s8i"), size: 8 }, elts: Str("%d %La\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn __isoc99_sscanf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca long_double<f80>, "parsed", align 16
        %2 = alloca s32i, "matched", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @__isoc99_sscanf : (s8i*, s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[24]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = get_global @.str.1 : s8i[4]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = call @__isoc99_sscanf(%6, %8, %1) : s32i [all]
        store %9, %2, align 4
        %10 = get_global @printf : (s8i*, ...) -> s32i*
        %11 = get_global @.str.2 : s8i[8]*
        %12 = cast(array_to_ptrdecay) %11 : s8i*
        %13 = load %2 : s32i, align 4
        %14 = load %1 : long_double<f80>, align 16
        %15 = call @printf(%12, %13, %14) : s32i [all]
        %16 = load %2 : s32i, align 4
        %17 = const 1 : s32i
        cmp
        %19 = ternary %18 ? { : bool
                %25 = const true : bool
                yield %25
        } : {
                %22 = load %1 : long_double<f80>, align 16
                %23 = const 1.00000000000000000011 : long_double<f80>
                cmp
                yield %24
        }
        %20 = cast(bool_to_int) %19 : s32i
        store %20, %0
        %21 = load %0 : s32i
        return %21
}
